Fixed button collapsing on tablet sized devices

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -274,7 +274,7 @@ $grid-spacing: 10px;
 	}
 
 	#view-selected-button {
-		margin-right: 2%;
+		margin-right: 1%;
 	}
 }
 
